src/objects/FourPlanning__c.object
<CustomObject>
    <fields>
        <fullName>Rango_Edificios__c</fullName>
        <label>Rango Edificios</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 5</fullName>
                </value>
                <value>
                    <fullName>5-10</fullName>
                </value>
                <value>
                    <fullName>10-20</fullName>
                </value>
                <value>
                    <fullName>&gt; 20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rango_Empleados__c</fullName>
        <label>Rango Empleados</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 500</fullName>
                </value>
                <value>
                    <fullName>500-3K</fullName>
                </value>
                <value>
                    <fullName>3K-5K</fullName>
                </value>
                <value>
                    <fullName>5K-10K</fullName>
                </value>
                <value>
                    <fullName>&gt; 10K</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rango_Sucursales__c</fullName>
        <label>Rango Sucursales</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 50</fullName>
                </value>
                <value>
                    <fullName>50-100</fullName>
                </value>
                <value>
                    <fullName>100-250</fullName>
                </value>
                <value>
                    <fullName>&gt; 250</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SeleccionMultipleContactoPublico__c</fullName>
        <label>SeleccionMultipleContactoPublico</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Presidente país/Municipal/Prefeito/Intendente</fullName>
                </value>
                <value>
                    <fullName>Ministro/ Vice Ministro/Gerente General/ Secretario Area/Regidor/Síndico/Asesor</fullName>
                </value>
                <value>
                    <fullName>Secretario Area/Regidor/Síndico/Asesor</fullName>
                </value>
                <value>
                    <fullName>Director General/CIO/Director Tecnología/CIO/Director Tecnología</fullName>
                </value>
                <value>
                    <fullName>Gerente de Area</fullName>
                </value>
                <value>
                    <fullName>Director de Compras/Jefe Compras</fullName>
                </value>
                <value>
                    <fullName>Responsable/ Especialista Proyecto</fullName>
                </value>
                <value>
                    <fullName>Sin contacto</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SeleccionMultiple__c</fullName>
        <label>SeleccionMultipleContactoCliente</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C level</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Gerente</fullName>
                </value>
                <value>
                    <fullName>Jefe</fullName>
                </value>
                <value>
                    <fullName>Analista</fullName>
                </value>
                <value>
                    <fullName>Usuarios</fullName>
                </value>
                <value>
                    <fullName>Sin Contacto</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tiene_Presencia_Internacional__c</fullName>
        <label>Tiene Presencia Internacional</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Banca__c</fullName>
        <label>Tipo de Banca</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banca Retail</fullName>
                </value>
                <value>
                    <fullName>Banca de Inversión</fullName>
                </value>
                <value>
                    <fullName>Banca Privada</fullName>
                </value>
                <value>
                    <fullName>Banca Publica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Extraccion__c</fullName>
        <label>Tipo de Extraccion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Petroleo</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Minería</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Titulo_Area_1__c</fullName>
        <label>Obsoleto</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Titulo_Area_2__c</fullName>
        <label>Obsoleto</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Titulo_Area_3__c</fullName>
        <label>Obsoleto</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_5_de_proveedores__c</fullName>
        <label>Top 5 de proveedores</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vencimiento_Datos_Fijos__c</fullName>
        <inlineHelpText>Fecha de Vencimiento de contratos de datos fijos</inlineHelpText>
        <label>Vencimiento Datos Fijos</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vencimiento_Otros_Servicios__c</fullName>
        <inlineHelpText>Fecha de vencimiento de contratos de otros servicios</inlineHelpText>
        <label>Vencimiento Otros Servicios</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vencimiento_Servicios_Moviles__c</fullName>
        <inlineHelpText>Fecha de vencimiento de contrato de servicios móviles</inlineHelpText>
        <label>Vencimiento Servicios Moviles</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Volumen_de_Extraccion__c</fullName>
        <label>Volumen de Extraccion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volumen_de_Produccion__c</fullName>
        <label>Volumen de Produccion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X4_Planning_Pro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>4 Planning Pro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>centro_distribucion_propia__c</fullName>
        <label>centro distribucion propia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>comercializacion_que_mas_crece_multiple__c</fullName>
        <label>comercializacion que mas crece multiple</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agencias o Sucursales Físicas Propias</fullName>
                </value>
                <value>
                    <fullName>Agencias o Sucursales Físicas de Terceros</fullName>
                </value>
                <value>
                    <fullName>Agentes Comercializadores propios (Empleados)</fullName>
                </value>
                <value>
                    <fullName>Agentes Comercializadores de Terceros (Canales)</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Web Propia</fullName>
                </value>
                <value>
                    <fullName>Web de Terceros</fullName>
                </value>
                <value>
                    <fullName>Aplicativo Móvil</fullName>
                </value>
                <value>
                    <fullName>Máquinas de Autoservicios (ATMs, Vending, etc…)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>conocimiento_de_la_cuenta__c</fullName>
        <label>Coeficiente [d] Desarrollo de Cuenta</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>esta_en_el_futuro_del_cliente__c</fullName>
        <label>esta en el futuro del cliente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>facturacion_cliente_garantizada__c</fullName>
        <label>facturacion cliente garantizada</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>flota_vehiculos_propios__c</fullName>
        <label>flota vehiculos propios</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Mixta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>importancia_banca_movil__c</fullName>
        <label>importancia banca movil</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lanes_estrat_gicos_de_tu_cliente__c</fullName>
        <defaultValue>&apos;1&apos;</defaultValue>
        <label>lanes estratégicos de tu cliente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prospecta_venta_tecnologia_cliente__c</fullName>
        <label>prospecta venta tecnologia cliente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>realcion_empresa_otros_clientes__c</fullName>
        <inlineHelpText>¿Conoces lo que Telefónica hace en otros países con clientes semejantes al tuyo?</inlineHelpText>
        <label>realcion empresa/otros clientes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vinculo_direccion_tecnologia__c</fullName>
        <label>vinculo direccion tecnologia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FourPlanning</label>
    <listViews>
        <fullName>Mis_4Planning</fullName>
        <columns>Cuenta__c</columns>
        <columns>Porcentaje_de_completitud_de_la_cuenta__c</columns>
        <columns>conocimiento_de_la_cuenta__c</columns>
        <columns>Ir_a_4Planning__c</columns>
        <filterScope>Mine</filterScope>
        <label>Mis 4Planning</label>
        <language>es</language>
    </listViews>
    <nameField>
        <label>Nombre de FourPlanning</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>4Planning</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>